improve table looks

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -1023,63 +1023,64 @@ Other compile-time variables:
 =comment There should be a better way get this table to be formatted
     properly, but if there is, Rakudo doesn't support it at the moment.
 
-=for table
-    $*ARGFILES         Magic command-line input handle.
-    ==
-    @*ARGS             Arguments from the command line.
-    ==
-    $*IN               Standard input filehandle, AKA stdin
-    ==
-    $*OUT              Standard output filehandle, AKA stdout
-    ==
-    $*ERR              Standard error filehandle, AKA stderr
-    ==
-    %*ENV              Environment variables
-    ==
-    $*REPO             A variable holding information about modules installed/loaded
-    ==
-    $*TZ               The system's local timezone.
-    ==
-    $*CWD              The Current Working Directory.
-    ==
-    $*KERNEL           Which kernel am I compiled for?
-    ==
-    $*DISTRO           Which OS distribution am I compiling under?
-    ==
-    $*VM               Which virtual machine am I compiling under?
-    ==
-    $*PERL             Which Perl am I compiled for?
-    ==
-    $*PID              Process ID of the current process.
-    ==
-    $*PROGRAM-NAME     Path to the current executable as it was entered on the
-                       command line, or C<-e> if perl was invoked with the -e flag.
-    ==
-    $*PROGRAM          Location (in the form of an C<IO::Path> object) of the
-                       Perl program being executed.
-    ==
-    $*EXECUTABLE       Absolute path of the perl executable that is currently running.
-    ==
-    $*EXECUTABLE-NAME  The name of the perl executable that is currently running.
-                       (e.g. perl6-p, perl6-m, Niecza.exe)
-                       Favor $*EXECUTABLE because it is not guaranteed that the perl
-                       executable is in PATH.
-    ==
-    $*USER             The user that is running the program. It is an object
-                       that evaluates to "username (uid)".  It will evaluate
-                       to the username only if treated as a string and the
-                       numeric user id if treated as a number.
-    ==
-    $*GROUP           The primary group of the user who is running the program.
-                      It is an object that evaluates to "groupname (gid)".
-                      It will evaluate to the groupname only if treated as a
-                      string and the numeric group id if treated as a number.
-    ==
-    $*HOME            An L<IO::Path> object representing the "home directory"
-                      of the user that is running the program.  If the
-                      "home directory" cannot be determined it will be L<Nil>
-    ==
-    $*SPEC            The appropriate L<IO::Spec> sub-class for the platform that
-                      the program is running on.
+=table
+    $*ARGFILES        | Magic command-line input handle.
+    ------------------+--------------------------------------------
+    @*ARGS            | Arguments from the command line.
+    ------------------+--------------------------------------------
+    $*IN              | Standard input filehandle, AKA stdin
+    ------------------+--------------------------------------------
+    $*OUT             | Standard output filehandle, AKA stdout
+    ------------------+--------------------------------------------
+    $*ERR             | Standard error filehandle, AKA stderr
+    ------------------+--------------------------------------------
+    %*ENV             | Environment variables
+    ------------------+--------------------------------------------
+    $*REPO            | A variable holding information about modules installed/loaded
+    ------------------+--------------------------------------------
+    $*TZ              | The system's local timezone.
+    ------------------+--------------------------------------------
+    $*CWD             | The Current Working Directory.
+    ------------------+--------------------------------------------
+    $*KERNEL          | Which kernel am I compiled for?
+    ------------------+--------------------------------------------
+    $*DISTRO          | Which OS distribution am I compiling under?
+    ------------------+--------------------------------------------
+    $*VM              | Which virtual machine am I compiling under?
+    ------------------+--------------------------------------------
+    $*PERL            | Which Perl am I compiled for?
+    ------------------+--------------------------------------------
+    $*PID             | Process ID of the current process.
+    ------------------+--------------------------------------------
+    $*PROGRAM-NAME    | Path to the current executable as it was entered on the
+                      | command line, or C<-e> if perl was invoked with the -e flag.
+    ------------------+--------------------------------------------
+    $*PROGRAM         | Location (in the form of an C<IO::Path> object) of the
+                      | Perl program being executed.
+    ------------------+--------------------------------------------
+    $*EXECUTABLE      | Absolute path of the perl executable that is currently running.
+    ------------------+--------------------------------------------
+    $*EXECUTABLE-NAME | The name of the perl executable that is currently running.
+                      | (e.g. perl6-p, perl6-m, Niecza.exe)
+                      | Favor $*EXECUTABLE because it is not guaranteed that the perl
+                      | executable is in PATH.
+    ------------------+--------------------------------------------
+    $*USER            | The user that is running the program. It is an object
+                      | that evaluates to "username (uid)".  It will evaluate
+                      | to the username only if treated as a string and the
+                      | numeric user id if treated as a number.
+    ------------------+--------------------------------------------
+    $*GROUP           | The primary group of the user who is running the program.
+                      | It is an object that evaluates to "groupname (gid)".
+                      | It will evaluate to the groupname only if treated as a
+                      | string and the numeric group id if treated as a number.
+    ------------------+--------------------------------------------
+    $*HOME            | An L<IO::Path> object representing the "home directory"
+                      | of the user that is running the program.  If the
+                      | "home directory" cannot be determined it will be L<Nil>
+    ------------------+--------------------------------------------
+    $*SPEC            | The appropriate L<IO::Spec> sub-class for the platform that
+                      | the program is running on.
+    ------------------+--------------------------------------------
 
 =end pod
