Added TMPDIR and fixed some errors (according to S28)

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -1042,13 +1042,13 @@ Other compile-time variables:
     ------------------+--------------------------------------------
     $*CWD             | The Current Working Directory.
     ------------------+--------------------------------------------
-    $*KERNEL          | Which kernel am I compiled for?
+    $*KERNEL          | Which kernel am I running under?
     ------------------+--------------------------------------------
-    $*DISTRO          | Which OS distribution am I compiling under?
+    $*DISTRO          | Which OS distribution am I running under?
     ------------------+--------------------------------------------
-    $*VM              | Which virtual machine am I compiling under?
+    $*VM              | Which virtual machine am I running under?
     ------------------+--------------------------------------------
-    $*PERL            | Which Perl am I compiled for?
+    $*PERL            | Which Perl am I running under?
     ------------------+--------------------------------------------
     $*PID             | Process ID of the current process.
     ------------------+--------------------------------------------
@@ -1081,6 +1081,8 @@ Other compile-time variables:
     ------------------+--------------------------------------------
     $*SPEC            | The appropriate L<IO::Spec> sub-class for the platform that
                       | the program is running on.
+    ------------------+--------------------------------------------
+    $*TMPDIR          | An L<IO::Path> object representing the "system temporary directory"
     ------------------+--------------------------------------------
 
 =end pod
