try again to get a searchable term

--- a/Language/about.pod
+++ b/Language/about.pod
@@ -92,7 +92,7 @@ is always considered a definition)
 =item C<Infix C<Z>>
 =item C<trait is cached> (A special case for the L<trait|/language/functions#Traits> documentables)
 
-Note that the C<X<>> construct should make the item searchable from
+Note that the C<X<a term| searchable term">> construct should make the item searchable from
 the search box at the top of each doc page.  
 
 =end pod
