add blurb about PERL6LIB env var

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -302,6 +302,18 @@ L<Cool>s.
     say 0?,1?,{}?,{ a => "b"}?; # False True False True
     =end code
 
+=head2 Finding Modules
+
+A user may have a collection of modules not found in the normal
+ecosystem but needed regularly.  Instead of using the C<lib> pragma
+one can use the C<X<PERL6LIB>> environment variable to point to module
+locations.  For example:
+
+    export PERL6LIB=/path/to/my-modules,/path/to/more/modules
+
+Note that the comma (',') is used as the directory separator (instead
+of the colon (':') as with Perl 5 for C<X<PERL5LIB>> or C<X<PERLLIB>>).
+
 =head1 Distributing Modules
 
 If you've written a Perl 6 module and would like to share it with the
