Mention , as default infix for Z operators

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -342,6 +342,10 @@ element of C<*> will repeat its 2nd last element indefinitely.
     my @l = <a b c d> Z~ ':' xx *; # <a: b: c: d:>
     my @l = <a b c d> Z~ 1, 2, *;  # <a1 b2 c2 d2>
 
+If infix operator is not given, C<,> (comma operator) will be used by default:
+
+    my @l = 1 Z 2; # [(1 2)]
+
 =head1 Sequential Operators
 
 The sequential metaoperator, C<S>, will suppress any concurrency, or reordering
