Added some documentation about THREAD and SCHEDULER. jnthn++, lizmat++ & skids++

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -1084,5 +1084,10 @@ Other compile-time variables:
     ------------------+--------------------------------------------
     $*TMPDIR          | An L<IO::Path> object representing the "system temporary directory"
     ------------------+--------------------------------------------
+    $*THREAD          | A L<Thread> object representing the currently executing thread.
+    ------------------+--------------------------------------------
+    $*SCHEDULER       | A L<ThreadPoolScheduler> object representing the current 
+                      | default scheduler.
+    ------------------+--------------------------------------------
 
 =end pod
