Add an OpaquePointer section to the FAQ page

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -475,6 +475,10 @@ For example regex matches return L<Match objects that know how to respond
 to list indexing, hash indexing, and that can turn into the matched
 string|/type/Match>.
 
+=head2 What's the difference between C<Pointer> and C<OpaquePointer>?
+
+C<OpaquePointer> is deprecated and has replaced with C<Pointer>.
+
 =head1 Meta Questions and Advocacy
 
 =head2 When will Perl 6 be ready? Is it ready now?
