“has replaced with” → “has been replaced with”

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -477,7 +477,7 @@ string|/type/Match>.
 
 =head2 What's the difference between C<Pointer> and C<OpaquePointer>?
 
-C<OpaquePointer> is deprecated and has replaced with C<Pointer>.
+C<OpaquePointer> is deprecated and has been replaced with C<Pointer>.
 
 =head1 Meta Questions and Advocacy
 
