Documented the 't' method

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -168,7 +168,13 @@ Will flush the filehandle to disk.
 
 This returns a value that the operating system would understand as a "file descriptor" and
 is suitable for passing to a native function that requires a file descriptor as an
-argument such as C<fcntl> or C<ioctl>. 
+argument such as C<fcntl> or C<ioctl>.
+
+=head2 method t
+
+    method t(IO::Handle:D: --> Bool)
+
+Returns L<Bool::True> if the handle is opened to a tty. 
 
 =head1 Related roles and classes
 
