--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -1209,6 +1209,18 @@ probably guessed, you just need to use X<C<PERL6LIB>|PERL6LIB>:
 
     $ PERL6LIB="/some/module/lib" perl6 program.p6
 
+In Perl 5 one uses the ':' (colon) as a directory separator for C<PERL5LIB>, but in 
+Perl 6 one uses the ',' (comma).  For example:
+
+    $ export PERL5LIB=/module/dir1:/module/dir2;
+
+but
+
+    $ export PERL6LIB=/module/dir1,/module/dir2;
+
+(Perl 6 does not recognize either the C<PERL5LIB> or the older Perl environment 
+variable C<PERLLIB>.)
+
 As with Perl5, if you don't specify C<PERL6LIB>, you need to specify the
 library path within the program via the C<use lib> pragma:
 
