remove unused X<> constructs

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -306,13 +306,13 @@ L<Cool>s.
 
 A user may have a collection of modules not found in the normal
 ecosystem but needed regularly.  Instead of using the C<lib> pragma
-one can use the C<X<PERL6LIB>> environment variable to point to module
+one can use the C<PERL6LIB> environment variable to point to module
 locations.  For example:
 
     export PERL6LIB=/path/to/my-modules,/path/to/more/modules
 
 Note that the comma (',') is used as the directory separator (instead
-of the colon (':') as with Perl 5 for C<X<PERL5LIB>> or C<X<PERLLIB>>).
+of the colon (':') as with Perl 5 for C<PERL5LIB> or C<PERLLIB>).
 
 =head1 Distributing Modules
 
