Documented the yyyy-mm-dd method

--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -207,4 +207,16 @@ has occurred so far during that month, the day itself included.
 
     say Date.new("2003-06-09").weekday-of-month;  # 2  (second Monday of the month)
 
+=head2 method yyyy-mm-dd
+
+Defined as:
+
+    method yyyy-mm-dd(Date:D:) returns Str:D
+
+Usage:
+
+    Dateish.yyyy-mm-dd
+
+Returns the date in C<YYYY-MM-DD> format (L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>)
+
 =end pod
