Updated docs for 'formatter'. ZoffixWin++, ugexe++, psch++

--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -52,7 +52,7 @@ Returns the day of the month of the date (1..31)
 
 Defined as:
 
-    method formatter(DateTime:D:)
+    method formatter(Dateish:D:)
 
 Usage:
 
@@ -65,6 +65,13 @@ Callable type object.
 
 The formatting function is called by L<#method Str> with the invocant as its
 only argument.
+
+    my $dt = Date.new('2015-12-31');  # (no formatter specified)
+    say $dt.formatter.WHAT;           # (Callable)
+    my $us-format = sub ($self) { sprintf "%2d/%02d/%04d", .month, .day, .year given $self; };
+    $dt = Date.new('2015-12-31', formatter => $us-format);
+    say $dt.formatter.WHAT;           # (Sub)
+    say $dt;                          # 12/31/2015
 
 =head2 method is-leap-year
 
