--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -170,6 +170,12 @@ This returns a value that the operating system would understand as a "file descr
 is suitable for passing to a native function that requires a file descriptor as an
 argument such as C<fcntl> or C<ioctl>.
 
+=head2 method opened
+
+    method opened(IO::Handle:D: --> Bool)
+
+Returns L<Bool::True> if the handle is open.
+
 =head2 method t
 
     method t(IO::Handle:D: --> Bool)
