Document IO::Handle.path
closes #499

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -150,6 +150,14 @@ and defaults to 64K.  The optional C<:bin> named parameter can be specified
 to indicate binary reading of the contents, rather than character based
 reading.
 
+=head2 method path
+
+For a handle opened on a file this returns the L<IO::Path|/type/IO/Path> that represents
+the file. For the standard I/O handles C<$*IN>, C<$*OUT> and C<$*ERR> it returns a
+L<IO::Special|/type/IO/Special> object.
+
+    $fh.path;
+
 =head2 method close
 
 Will close a previously opened filehandle.
