--- a/Type/IO/Special.pod
+++ b/Type/IO/Special.pod
@@ -17,9 +17,9 @@ regular files.
     method new(:$!what!)
 
 The constructor has a single required named argument C<what> that will be
-'<IN>', '<OUT>' or '<ERR>' as appropriate.  It is unlikely that you
+'<STDIN>', '<STDOUT>' or '<STDERR>' as appropriate.  It is unlikely that you
 will ever need to construct one of these objects yourself however as it
-will be one for you when the special handles are initialised.
+will be done for you when the special handles are initialised.
 
 =head2 method WHICH
 
@@ -31,7 +31,7 @@ This returns a string which identifies the object.
 
     method Str(IO::Special:D:)
 
-This returns '<IN>', '<OUT>' or '<ERR>' as approriate.
+This returns '<STDIN>', '<STDOUT>' or '<STDERR>' as approriate.
 
 =head2 method IO
 
