Fixed a couple of typos

--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -68,7 +68,7 @@ only argument.
 
     my $dt = Date.new('2015-12-31');  # (no formatter specified)
     say $dt.formatter.WHAT;           # (Callable)
-    my $us-format = sub ($self) { sprintf "%2d/%02d/%04d", .month, .day, .year given $self; };
+    my $us-format = sub ($self) { sprintf "%02d/%02d/%04d", .month, .day, .year given $self; };
     $dt = Date.new('2015-12-31', formatter => $us-format);
     say $dt.formatter.WHAT;           # (Sub)
     say $dt;                          # 12/31/2015
@@ -209,7 +209,7 @@ Usage:
 
     Dateish.weekday-of-month
 
-Returns a number 1..5 indicating the number of times a particular day-of-week 
+Returns a number (1..5) indicating the number of times a particular day-of-week
 has occurred so far during that month, the day itself included. 
 
     say Date.new("2003-06-09").weekday-of-month;  # 2  (second Monday of the month)
