Use C«» instead of C<<>> for shift ops

--- a/Language/5to6-perlop.pod
+++ b/Language/5to6-perlop.pod
@@ -108,7 +108,7 @@ concatenation operator in Perl 6.
 
 =head2 Shift Operators
 
-C<< << >> and C<< >> >> have been replaced by C<< +< >> and C<< +> >>.
+C« << » and C« >> » have been replaced by C<< +< >> and C<< +> >>.
 
 =head2 Named Unary Operators
 
