--- a/Language/5to6-perlop.pod
+++ b/Language/5to6-perlop.pod
@@ -337,7 +337,7 @@ negation is C<?^>.
 Bitwise and is C<+&>.
 
 Bitwise integer or is C<+|>. Bitwise integer xor is infix C<+^>. Bitwise
-boolean or is <?|>.
+boolean or is C<?|>.
 
 Left shift and right shift are C<< +< >> and C<< +> >>.
 
