--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -175,7 +175,7 @@ become C<$*SYS_FD_MAX>, this has not yet been implemented.
 indicates that C<@F> in Perl 5 is replaced by C<@_> in Perl 6, but it's
 unclear just how that works. On the other hand, it's currently something of a
 moot point, as the Perl 5 to Perl 6 Translation doc indicates that the C<-a>
-and <-F> command-line switches are not yet implemented in rakudo.
+and C<-F> command-line switches are not yet implemented in rakudo.
 
 =item @INC
 
