--- a/Language/phasers.pod
+++ b/Language/phasers.pod
@@ -40,6 +40,9 @@ Here is a summary:
       CATCH {...} #  catch exceptions, before LEAVE
     CONTROL {...} #  catch control exceptions, before LEAVE
 
+       LAST {...} #  supply tapped by whenever-block is done, runs very last
+       QUIT {...} #  catch async exceptions within a whenever-block, runs very last
+
     COMPOSE {...} #  when a role is composed into a class
 
 Phasers marked with a C<*> have a run-time value, and if evaluated earlier than
@@ -155,6 +158,11 @@ teardown usually want to happen in the opposite order from each other.
     Post-condition for block
 
        POST {...} #  assert postcondition at every block exit, after LEAVE
+
+    Async whenever-block is complete
+
+       LAST {...} #  if ended normally with done, runs once after block
+       QUIT {...} #  catch async exceptions
 
     Program terminating
 
@@ -353,5 +361,19 @@ phase.
 =head2 COMPOSE
 
 Runs when a role is composed into a class.
+
+=head1 Asynchronous Phasers
+
+=head2 LAST
+
+Runs when a L<Supply|/type/Supply> finishes with a call to C<done> or when a C<supply> block exits normally. It runs completely after the C<whenever> block it is placed within finishes.
+
+This phaser reuses the name C<LAST>, but works differently from the C<LAST> loop phaser. This phaser is similar to setting the C<done> routine while tapping a supply with C<tap>.
+
+=head2 QUIT
+
+Runs when a L<Supply|/type/Supply> terminates early with an exception. It runs after the C<whenever> block it is placed within finishes.
+
+This phaser is siilar to setting the C<quit> routine while tapping a Supply with C<tap>.
 
 =end pod
