Fixed example typo, two broken links and updated the documentation for 'time'

--- a/Language/terms.pod
+++ b/Language/terms.pod
@@ -51,14 +51,14 @@ constructs a L<Num> with value C<3 * 10**8>.
     q|Other delimiters can be used too!|
 
 String literals are most often created with C<'> or C<">, however strings
-are actually a powerful sub-language of Perl 6. See L<Quoting Constructs>.
+are actually a powerful sub-language of Perl 6. See L<Quoting Constructs|/language/quoting>.
 
 =head2 Regex
 
     / match some text /
     rx/slurp \s rest (.*) $/
 
-These forms produce regex literals. See L<Quoting Constructs>.
+These forms produce regex literals. See L<Quoting Constructs|/language/quoting>.
 
 =head2 Pair
 
@@ -117,7 +117,7 @@ addition one can add new identifier terms with the syntax:
 or as constants:
 
     constant forty-two = 42;
-    say fourty-two
+    say forty-two;
 
 =head2 term self
 
@@ -131,7 +131,7 @@ Returns an L<Instant> object representing the current time.
 
 =head2 term time
 
-Returns an L<Int> representing the current time.
+Returns the current POSIX time as an L<Int>.
 
 =head2 term rand
 
