Fix a spelling error and wrap in phasers/concurrency

--- a/Language/concurrency.pod
+++ b/Language/concurrency.pod
@@ -370,7 +370,9 @@ as seen by a C<when> or C<default> block, the exception is caught and handled.
 Otherwise, the exception continues to up the call tree (i.e., the same behavior
 as when C<quit> is not set).
 
-If you are using the C<react> or C<supply> block syntax with C<whenever>, you can add phasers within your C<whenever> blocks to handle the C<done> and C<quit> messages from the tapped supply:
+If you are using the C<react> or C<supply> block syntax with C<whenever>, you
+can add phasers within your C<whenever> blocks to handle the C<done> and C<quit>
+messages from the tapped supply:
 
     react {
         whenever $supply {
