--- a/Language/phasers.pod
+++ b/Language/phasers.pod
@@ -366,14 +366,20 @@ Runs when a role is composed into a class.
 
 =head2 LAST
 
-Runs when a L<Supply|/type/Supply> finishes with a call to C<done> or when a C<supply> block exits normally. It runs completely after the C<whenever> block it is placed within finishes.
+Runs when a L<Supply|/type/Supply> finishes with a call to C<done> or when a
+C<supply> block exits normally. It runs completely after the C<whenever> block
+it is placed within finishes.
 
-This phaser reuses the name C<LAST>, but works differently from the C<LAST> loop phaser. This phaser is similar to setting the C<done> routine while tapping a supply with C<tap>.
+This phaser reuses the name C<LAST>, but works differently from the C<LAST> loop
+phaser. This phaser is similar to setting the C<done> routine while tapping a
+supply with C<tap>.
 
 =head2 QUIT
 
-Runs when a L<Supply|/type/Supply> terminates early with an exception. It runs after the C<whenever> block it is placed within finishes.
+Runs when a L<Supply|/type/Supply> terminates early with an exception. It runs
+after the C<whenever> block it is placed within finishes.
 
-This phaser is siilar to setting the C<quit> routine while tapping a Supply with C<tap>.
+This phaser is similar to setting the C<quit> routine while tapping a Supply
+with C<tap>.
 
 =end pod
