--- a/Language/5to6-perlop.pod
+++ b/Language/5to6-perlop.pod
@@ -35,7 +35,7 @@ L<https://doc.perl6.org/language/operators#Operator_Precedence>.
 The things listed in Perl 5's perlop document as unary and list operators in
 this section tend to be things that can also be thought of as functions, such
 as C<print> and C<chdir>. As such, you can find information about them in
-L<5to6-perlfunc.pod>. Parentheses are still used for grouping.
+L<5to6-perlfunc.pod|/language/5to6-perlfunc>. Parentheses are still used for grouping.
 
 =head2 The Arrow Operator
 
@@ -112,7 +112,7 @@ C« << » and C« >> » have been replaced by C<< +< >> and C<< +> >>.
 
 =head2 Named Unary Operators
 
-As noted above, you'll find these in L<5to6-perlfunc.pod>.
+As noted above, you'll find these in L<5to6-perlfunc.pod|/language/5to6-perlfunc>.
 
 =head2 Relational Operators
 
@@ -213,7 +213,7 @@ separator. If you are trying to just literally translate a line of Perl
 =head2 List Operators (Rightward)
 
 Like the Named Unary Operators, you'll find these discussed in
-L<5to6-perlfunc.pod>.
+L<5to6-perlfunc.pod|/language/5to6-perlfunc>.
 
 =head2 Logical Not
 
@@ -318,7 +318,7 @@ If you want to slurp the entire file into a scalar, you would - surprise! -
 use the C<.slurp> method. For instance, C<my $x = "filename".IO.slurp;> or
 C<my $fh = open "filename", :r;my $x = $fh.slurp;>.
 
-As noted in L<5to6-perlvar.pod>, the C<ARGV> magic input filehandle has
+As noted in L<5to6-perlvar.pod|/language/5to6-perlvar>, the C<ARGV> magic input filehandle has
 been replaced by C<$*ARGFILES>, and the C<@ARGV> array of command line
 arguments has been replaced by C<@*ARGS>.
 
