Fixed a broken link

--- a/Language/5to6-perlsyn.pod
+++ b/Language/5to6-perlsyn.pod
@@ -49,7 +49,7 @@ L<http://doc.perl6.org/language/5to6#Whitespace>.
 
 =head2 Declarations
 
-As noted in L<5to6-perlfunc.pod>, there is no C<undef> in Perl 6. A declared, but
+As noted in L<5to6-perlfunc.pod|/language/5to6-perlfunc>, there is no C<undef> in Perl 6. A declared, but
 uninitialized scalar variable will evaluate to its type. In other words, C<my
 $x;say $x;> will give you "(Any)". C<my Int $y;say $y;> will give you "(Int)".
 
