--- a/Language/control.pod
+++ b/Language/control.pod
@@ -774,6 +774,24 @@ conditional again.
 
 =comment TODO
 
+=head1 X<samewith|control flow>
+
+The C<samewith> allows one to call a multisub of the same name as the current sub. 
+
+=begin code
+
+multi indent-say ( 'test' )
+{
+    samewith 'ABCD';
+}
+
+multi indent-say ( Str $string )
+{
+    say "\t$string";
+}
+
+=end code
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
