add MAIN to index

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -724,6 +724,8 @@ currently (2015.02) only implements them for subroutine parameters.
 
 =head1 C<sub MAIN>
 
+X<|MAIN>
+
 The sub with the special name C<MAIN> is executed after all relevant phaser
 and it's signature is the means by which command line arguments can be parsed.
 Multi methods are supported and a usage method is automatically generated and
