indent MAIN example a little better

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -731,7 +731,10 @@ and it's signature is the means by which command line arguments can be parsed.
 Multi methods are supported and a usage method is automatically generated and
 displayed if no command line arguments are provided.
 
-    sub MAIN ( Int :$length = 24, :file($data) where { .IO.f // die "file not found in $*CWD" } = 'file.dat', Bool :$verbose ) {
+    sub MAIN ( Int :$length = 24, 
+               :file($data) where { .IO.f // die "file not found in $*CWD" } = 'file.dat',
+               Bool :$verbose ) 
+    {
         say $length if $length.defined;
         say $data   if $data.defined;
         say 'Verbosity ', ($verbose ?? 'on' !! 'off');
