add 0x and friends to class Int

--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -13,11 +13,18 @@ There are two main syntax forms for C<Int> literals
     123         # Int in decimal notation
     :16<BEEF>   # Int in radix notations
 
-Both forms allow underscores between any two digits which can serve as visual
+For your convenience common radix forms come with a prefix shortcut.
+
+    say so :2<11111111> == 0b11111111 == :8<377> == 0o377 == 255 == 0d255 == :16<ff> == 0xff;
+    # OUTPUT«True␤»
+
+All forms allow underscores between any two digits which can serve as visual
 separators, but don't carry any meaning:
 
-    5_00000     # five Lakhs
-    500_000     # five hundred thousand
+    5_00000       # five Lakhs
+    500_000       # five hundred thousand
+    0xBEEF_CAFE   # a strange place
+    :2<1010_1010> # 0d170
 
 =head1 Methods
 
