Fixed two typos

--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -236,7 +236,7 @@ translation.
 
 =item $^T
 
-Replaced in Perl 6 by C<$*INITITME>. Unlike in Perl 5, this is not in seconds
+Replaced in Perl 6 by C<$*INITTIME>. Unlike in Perl 5, this is not in seconds
 since epoch, but an C<Instant> object, which is measured in atomic seconds,
 with fractions.
 
@@ -244,7 +244,7 @@ with fractions.
 
 =item $^V
 
-As with C<$]> this has been replaced with C<$PERL.version>.
+As with C<$]> this has been replaced with C<$*PERL.version>.
 
 =item ${^WIN32_SLOPPY_STAT}
 
