fix copypasta mistage

--- a/Type/Order.pod
+++ b/Type/Order.pod
@@ -16,7 +16,7 @@ Coerces it's arguments to Stringy.
 
 =head2 infix <=>
 
-   multi sub infix:<cmp>(\a, \b) returns Order:D
+   multi sub infix:«<=>»(Int:D \a, Int:D \b) returns Order:D
 
 Specialized form for Int.
 
