Fixed broken example code with suggested fixes from nd3i++

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -42,25 +42,23 @@ defined within the current scope.
 
 =begin code :allow<L>
 sub escape ($str) {
-    L<$_> = $str;
     # Puts a slash before non-alphanumeric characters
-    L<s>:g[<-alpha-digit>] = "\\$/";
+    S:g[<-alpha -digit>] = "\\$/" given $str
 }
 
-say escape "foo#bar?" # foo\#bar\?
+say escape 'foo#bar?'; # foo\#bar\?
 
 {
     sub escape ($str) {
-        $_ = $str;
         # Writes each non-alphanumeric character in its hexadecimal escape
-        s:g|<-alpha-digit>| = "\\x[{ $/.base(16) }]";
+        S:g[<-alpha -digit>] = "\\x[{ $/.ord.base(16) }]" given $str
     }
 
-    say escape "foo#bar?" # foo\x[23]bar\x[3F]
+    say escape 'foo#bar?' # foo\x[23]bar\x[3F]
 }
 
 # Back to original escape function
-say escape "foo#bar?" # foo\#bar\?
+say escape 'foo#bar?'; # foo\#bar\?
 =end code
 
 Subroutines don't have to be named; in this case they're called anonymous.
