Added some documentation for the 'freeze' method. #perl6++

--- a/Type/Pair.pod
+++ b/Type/Pair.pod
@@ -127,4 +127,23 @@ Usage:
 
 Returns a list of one C<Pair>, namely this one.
 
+=head2 method freeze
+
+Defined as:
+
+    method freeze(Pair:D:)
+
+Usage:
+
+    PAIR.freeze
+
+Makes the I<value> of the C<Pair> read-only, by removing it from its L<Scalar container|/language/containers#Scalar_containers>, and returns it.
+
+    my $str = "apple";
+    my $p = Pair.new('key', $str);
+    $p.value = "orange";              # this works as expected
+    $p.say;                           # key => orange
+    $p.freeze.say;                    # orange
+    $p.value = "a new apple";         # Fails with 'Cannot modify an immutable Str'
+
 =end pod
