get IO::Notification::Change into the index

--- a/Type/IO/Notification.pod
+++ b/Type/IO/Notification.pod
@@ -3,6 +3,7 @@
 =TITLE class IO::Notification
 
 =SUBTITLE Asynchronous notification for file and directory changes
+X<|IO::Notification::Change>
 
     enum FileChangeEvent (:FileChanged(1), :FileRenamed(2));
 
