--- a/Language/about.pod
+++ b/Language/about.pod
@@ -51,7 +51,7 @@ with Mojolicious::Lite must be installed. Then run:
 =head2 Adding definitions
 
 Documentables can be defined using an C<=headN> Pod directive, where
-C<N> is greater than one (e.g. C<=head1>, C<=head2>, C<=head3>, …).
+C<N> is greater than zero (e.g., C<=head1>, C<=head2>, C<=head3>, …).
 
 All of the paragraphs and blocks following that directive, up until the
 next directive of the same level, will be considered part of the
