add `is copy` example to lines

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -1288,6 +1288,10 @@ my @lines = 'huge-csv'.IO.lines;
 Without any arguments, sub C<lines> operates on
 C<$*ARGFILES>, which defaults to C<$*IN> in the absence of any filenames.
 
+To modify values in place use C<is copy> to force a writeable container.
+
+    for $*IN.lines -> $_ is copy { s/(\w+)/{$0 ~ $0}/; .say }
+
 =head2 method words
 
 Defined as:
