State that Mu.gist will truncate at 100 elements.

--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -63,8 +63,9 @@ readable. Method C<Str> warns on type objects, and produces the empty string.
     multi sub    gist(Mu) returns Str
     multi method gist()   returns Str
 
-Returns a string representation of the invocant, optimized for
-fast recognition by humans.
+Returns a string representation of the invocant, optimized for fast recognition
+by humans. As such lists will be truncated at 100 elements. Use C<.perl> to get
+all elements.
 
 The default C<gist> method in C<Mu> re-dispatches to the L<perl> method for
 defined invocants, and returns the type name in parenthesis for type object
