Fixed a broken link

--- a/Language/concurrency.pod
+++ b/Language/concurrency.pod
@@ -406,7 +406,7 @@ and returns it, blocking until a new item is sent if the queue is empty:
 If the channel has been closed with the L<method
 close|/type/Channel#method_close> then any C<send> will cause the
 exception L<X::Channel::SendOnClosed> to be thrown, and a C<receive>
-will throw a L<X::Channel::ReceiveOnClose> if there are no more items
+will throw a L<X::Channel::ReceiveOnClosed> if there are no more items 
 on the queue.
 
 The L<method list|/type/Channel#method_list> returns all the items on
