Another five broken links fixed

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -245,15 +245,15 @@ many modules, will follow.  These produce a consistent look and feel.
 Perhaps the most important of these is the way slurpy list arguments are
 handled.  Most of the time, functions will not automatically flatten
 slurpy lists.  The rare exceptions are those functions that don't have a
-reasonable behavior on lists of lists, for example, L<chrs|routine/chrs>,
-or where there is a conflict with an established idiom, like L<pop|routine/pop>
-being the inverse of C<push|routine/push>.
+reasonable behavior on lists of lists, for example, L<chrs|/routine/chrs>,
+or where there is a conflict with an established idiom, like L<pop|/routine/pop>
+being the inverse of L<push|/routine/push>.
 
 If you wish to match this look and feel, any Iterable argument must
 be broken out element-by-element using a **@ slurpy, with two nuances:
 
-=item An Iterable inside a L<Scalar container|containers#Scalar_containers|> does not count.
-=item Lists created with a L<C<,>|routine/,> at the top level only count as one Iterable.
+=item An Iterable inside a L<Scalar container|/language/containers#Scalar_containers> does not count.
+=item Lists created with a L<C<,>|/routine/,> at the top level only count as one Iterable.
 
 This can be achieved by using a slurpy with a C<+> or C<+@> instead of C<**>:
 
