A few more broken links

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -394,7 +394,7 @@ being interpreted as a named argument.
 
 Block or L<Hash> constructor.X<|block constructor; hash constructor>
 
-If the contents looks like a list of pairs and does not use L<$_> or other
+If the contents looks like a list of pairs and does not use L<$_|/syntax/$_> or other
 placeholder parameters, returns an itemized L<Hash>.
 
 Otherwise it constructs a L<Block>.
@@ -1349,7 +1349,7 @@ For value types, C<===> behaves like C<eqv>:
     # different types
     say 1 === 1.0;              # False
 
-C<===> uses the L<WHICH> method to obtain the object identity, so all value
+C<===> uses the L<WHICH|/routine/WHICH> method to obtain the object identity, so all value
 types must override method C<WHICH>.
 
 =head2 infix C«=:=»
@@ -1357,7 +1357,7 @@ types must override method C<WHICH>.
     proto sub infix:<=:=>(Mu \a, Mu \b) returns Bool:D is assoc<chain>
     multi sub infix:<=:=>(Mu \a, Mu \b)
 
-X<Container identity operator>. Returns L<True> if both arguments are bound to the same
+X<Container identity operator>. Returns C<True> if both arguments are bound to the same
 container. If it returns C<True>, it generally means that modifying one will
 also modify the other.
 
