More broken links fixed

--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -197,12 +197,12 @@ that a module can, so making a scoped variable sounds like good idea.
 
        =end code
 
-Class attributes defined by L<my> or L<our> may also be initialized when
+Class attributes defined by L<my|/syntax/my> or L<our|/syntax/our> may also be initialized when
 being declared, however we are implementing the Singleton pattern here and
 the object must be created during its first use. It is not 100% possible to
 predict the moment when attribute initialization will be executed, because
 it can take place during compilation, runtime or both, especially when
-importing the class using the L<use> keyword.
+importing the class using the L<use|/syntax/use> keyword.
 
     class HaveStaticAttr {
           my Foo $.foo = some_complicated_subroutine;
